--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>Calculadora da Thati</h1>
+        <h1>Calculadora da Thatiane</h1>
         <div class ="calculadora">
             <h2>Calculadora</h2>
             <p id="resultado"></p>
